<resources>
    <string name="app_name">TwoActivities</string>
    <string name="button_main">Send</string>
    <string name="text_header">Message Received</string>
    <string name="editText_main">Enter Your Message Here</string>
    <string name="button_second">reply</string>
    <string name="editText_second">you can reply here</string>
    <string name="text_header_reply">reply received</string>
</resources>